[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[[bin]]
name = "advent_of_code_2023"
path = "main.rs"

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
pollster = "0.3.0"
regex = "1.10.2"
reqwest = "0.11.22"
tokio = { version = "1.34.0", features = ["full"] }
